fix: fixed btns on iphone, added media query for iphone 5 se

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -23,6 +23,7 @@ h1 {
     min-height: 100vh;
 
     background-color: #fbf8ef;
+    overflow: hidden;
   }
 }
 
@@ -31,7 +32,12 @@ h1 {
     display: flex;
     flex-direction: column;
 
-    max-width: 350px;
+    max-width: 370px;
+    padding: 10px;
+
+    @media (max-width: 370px) {
+      max-width: 310px;
+    }
   }
 
   &__header {
@@ -65,6 +71,13 @@ h1 {
     will-change: transform;
 
     font-size: 24px;
+
+    @media (max-width: 370px) {
+      width: 60px;
+      height: 60px;
+
+      font-size: 20px;
+    }
   }
 
   &__info {
@@ -83,6 +96,13 @@ h1 {
     color: #776e65;
 
     font-size: 16px;
+
+    @media (max-width: 370px) {
+      width: 60px;
+      height: 60px;
+
+      font-size: 14px;
+    }
   }
 
   &__score {
@@ -94,6 +114,10 @@ h1 {
   }
 
   &__button {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
     width: 75px;
     height: 75px;
 
@@ -108,6 +132,13 @@ h1 {
     cursor: pointer;
 
     transition: 0.25s ease background-color;
+
+    @media (max-width: 370px) {
+      width: 60px;
+      height: 60px;
+
+      font-size: 14px;
+    }
 
     &--start {
       background-color: #1dae28;
@@ -136,9 +167,6 @@ h1 {
   transition: opacity 0.3s ease;
 
   &__cell {
-    position: relative;
-    z-index: 1;
-
     width: 75px;
     height: 75px;
 
@@ -149,6 +177,11 @@ h1 {
     text-align: center;
 
     transition: transform 0.3s ease;
+
+    @media (max-width: 370px) {
+      width: 60px;
+      height: 60px;
+    }
 
     &--2 {
       background-color: #eee4da;
